Fixes agenda time contrast ratio

--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -1595,8 +1595,8 @@ tr td.highlight-session {
 }
 
 .agenda-row .time {
-  color: #888;
   width: 85px;
+  color: #737373;
 }
 
 // Video
